[tool.poetry]
name = "kns7_gallery_api"
version = "0.1.0"
description = ""
authors = ["Jimmy Girardet <ijkl@netc.fr>"]

[tool.poetry.dependencies]
python = "^3.6"
pony = "^0.7.9"
falcon = "^1.4"
pymysql = "^0.9.3"
uvicorn = "^0.6.1"
starlette = "^0.11.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
